# dusk-tswow

./: .gitignore  .gitmodules  build.js  package-lock.json  package.json
.forgejo/workflows/: ci.yml  sync-to-github.yml
misc/client-extensions/: CMakeLists.txt  README.md
misc/client-extensions-64/: CMakeLists.txt  Readme.md
misc/client-extensions-64/discord_social_sdk/: disclaimer.md
misc/client-extensions-64/examples/: ProximityVoiceMain.cpp
misc/client-extensions-64/src/: main.cpp
misc/client-extensions-64/src/DiscordManager/: DiscordManager.cpp  DiscordManager.h  DiscordTokenStore.cpp  DiscordTokenStore.h
misc/client-extensions-64/src/IPC/: CommandQueue.h  IPCFrame.cpp  IPCFrame.h  OpcodeDispatcher.h  PacketBuilder.h  PipeServer.cpp  PipeServer.h  UpdatePipeClient.cpp  UpdatePipeClient.h
misc/client-extensions-64/src/Voice/: VoiceManager.cpp  VoiceManager.h
misc/client-extensions-64/src/handlers/: HandlerRegistry.cpp  HandlerRegistry.h  Opcodes.h  VirtualHandler.h
misc/client-extensions-64/src/handlers/Lobby/: LobbyHandler.cpp  LobbyHandler.h
misc/client-extensions/ClientExtensions/: CMakeLists.txt  ClientExtensions.cpp  ClientLua.cpp  ClientMPQ.cpp  FrameXMLExtensions.cpp  FrameXMLExtensions.h  Main.cpp  SharedDefines.h  SpellAttrDefines.h
misc/client-extensions/ClientExtensions/CDBCMgr/CDBCDefs/: SpellAdditionalAttributes.h
misc/client-extensions/ClientExtensions/Camera/: CVar.cpp
misc/client-extensions/ClientExtensions/Character/: CharacterExtensions.cpp  CharacterExtensions.h
misc/client-extensions/ClientExtensions/CustomLua/: PlayerFunctions.cpp  SpellFunctions.cpp
misc/client-extensions/ClientExtensions/IPC/: IPCClient.cpp  IPCTest.cpp  IPCTest.h  Opcodes.h  PacketBuilder.h
misc/client-extensions/ClientExtensions/Misc/: MiscFixes.cpp
misc/client-extensions/ClientExtensions/Spells/: Spells.cpp
misc/client-extensions/ClientExtensions/Tooltip/: SpellTooltipExtensions.cpp
misc/client-extensions/CustomPackets/: CustomPacketBase.cpp  CustomPacketBase.h  CustomPacketBuffer.cpp  CustomPacketBuffer.h  CustomPacketChunk.cpp  CustomPacketChunk.h  CustomPacketRead.cpp  CustomPacketRead.h
misc/client-extensions/include/Character/: CharacterDefines.h
misc/client-extensions/include/CustomPackets/: CustomPacketBase.h  CustomPacketBuffer.h  CustomPacketChunk.h
misc/client-extensions/include/Misc/: MiscFixes.h
misc/client-extensions/include/World/: WorldData.h
misc/client-extensions/libs/msdfgen/ext/: import-svg.cpp
misc/client-extensions/src/: ClientArguments.cpp  ClientDetours.cpp  ClientDetours.h  ClientExtensions.cpp  ClientExtensions.h  ClientLua.cpp  ClientLua.h  ClientMPQ.cpp  ClientNetwork.cpp  ClientNetwork.h  ExampleModule.cpp  FSRoot.cpp  FrameXMLExtensions.cpp  FrameXMLExtensions.h  Logger.cpp  Logger.h  Main.cpp  SharedDefines.h  SpellAttrDefines.h  Util.cpp
misc/client-extensions/src/CDBCMgr/: CDBC.cpp  CDBC.h  CDBCMgr.cpp  CDBCMgr.h
misc/client-extensions/src/CDBCMgr/CDBCDefs/: DangerZoneVisualProfile.h  ItemDifficultyText.h  LFGRoles.h  ScriptedMissileMotion.h  Spell.h  SpellAdditionalAttributes.h  SpellAdditionalCostData.h  SpellEffect.h  SpellEffectScalars.h  ZoneLight.h  ZoneLightPoint.h
misc/client-extensions/src/Camera/: CVar.cpp  WorldSpace.cpp
misc/client-extensions/src/Character/: CharacterDefines.h  CharacterExtensions.cpp  CharacterExtensions.h  CharacterFixes.cpp  CharacterFixes.h  VisibleItemOverrides.cpp  VisibleItemOverrides.h
misc/client-extensions/src/ClientData/: Camera.h  DBCRowTypes.h  Draw.h  EditorRuntime.cpp  EditorRuntime.h  EditorState.h  Event.h  GameClient.h  GameEnums.h  GameObject.h  GizmoDraw.cpp  GizmoDraw.h  GizmoPick.h  GxBatch.h  GxDevice.h  GxTypes.h  MathTypes.h  Object.h  ObjectFields.h  ObjectManager.h  Players.h  SharedDefines.h  Spell.h  System.h  Units.h  VectorMath.h  WorldFrame.h
misc/client-extensions/src/CustomLua/: ChildClipping.cpp  CustomDBCFunctions.cpp  MouseFunctions.cpp  PlayerFunctions.cpp  SpellFunctions.cpp  UIFunctions.cpp
misc/client-extensions/src/CustomLua/CharCreate/: CharCreateDefines.h  CharCreateFunctions.cpp
misc/client-extensions/src/CustomLua/Housing/: MouseFunctions.cpp  QuatFunctions.cpp  QuatFunctions.h
misc/client-extensions/src/CustomPackets/: CustomPacketBase.cpp  CustomPacketBuffer.cpp  CustomPacketChunk.cpp  CustomPacketRead.cpp  CustomPacketRead.h  CustomPacketWrite.cpp  CustomPacketWrite.h
misc/client-extensions/src/Editor/: EditorObject.h  EditorRuntime.cpp  EditorRuntime.h  EditorState.h  GizmoDraw.cpp  GizmoDraw.h  GizmoPick.h
misc/client-extensions/src/FileIntegrity/: FileIntegrity.cpp  FileIntegrity.h
misc/client-extensions/src/IPC/: DiscordPresenceIPC.cpp  IPCClient.cpp  IPCClient.h  IPCTest.cpp  Opcodes.h  PacketBuilder.h  SharedMemoryRingBuffer.h  VoiceUpdateIPC.cpp  VoiceUpdateIPC.h  x64FileStartup.cpp  x64FileStartup.h
misc/client-extensions/src/Misc/: MiscFixes.cpp  MiscFixes.h
misc/client-extensions/src/Rendering/: M2ModelPatches.cpp  M2ModelPatches.h
misc/client-extensions/src/Rendering/MSDF/: D3D.cpp  D3D.h  GameClient.h  MSDF.cpp  MSDF.h  MSDFBootstrap.cpp  MSDFCache.cpp  MSDFCache.h  MSDFFont.cpp  MSDFFont.h  MSDFManager.h  MSDFPregen.cpp  MSDFPregen.h  MSDFShaders.h  MSDFUtils.h  MSDFValidator.h  Types.h
misc/client-extensions/src/SavedConfigs/: DHConfig.cpp  DHConfig.h  LuaCppTableBridge.h
misc/client-extensions/src/Spells/: DangerZoneVisuals.cpp  DangerZoneVisuals.h  ScriptedMissileVisuals.cpp  ScriptedMissileVisuals.h  Spells.cpp  Spells.h
misc/client-extensions/src/Spells/SpellCache/: SpellCacheAuthority.cpp  SpellCacheAuthority.h  SpellCacheStreaming.cpp  SpellCacheStreaming.h  SpellDbProvider.cpp  SpellDbProvider.h
misc/client-extensions/src/Tooltip/: ItemTooltipExtensions.cpp  ItemTooltipExtensions.h  SetSpellReplacement.cpp  SetSpellReplacementDefines.h  SpellTooltipExtensions.cpp  SpellTooltipExtensions.h  TooltipDefines.h
misc/client-extensions/src/World/: CMapOverrides.cpp  ExtendedTerrainTextures.cpp  ExtendedTerrainTextures.h  WMOLogging.cpp  WMOLogging.h  WorldData.cpp  WorldData.h
(+144 files in other folders)
